# MoriSora-Manga-Reader

./: .gitignore  README.md  VARIABLES.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts  迭代信息.md
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: archive_cache.rs  archive_parser.rs  cover_cache.rs  database.rs  events.rs  file_operations.rs  folder_manager.rs  lib.rs  library_scanner.rs  main.rs  settings.rs  sort_utils.rs
src/components/: LibraryView.tsx  ReaderView.tsx  SettingsDialog.tsx
src/services/: databaseService.ts  eventService.ts
src/stores/: mangaStore.ts
src/types/: sourceType.ts
