[package]
name = "manga-reader"
version = "0.1.0"
description = "A Manga Reader App built with Tauri"
authors = []
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
zip = "0.6"
image = "0.24"
rusqlite = { version = "0.31", features = ["bundled"] }
dirs = "5"
unrar = "0.5"
lopdf = "0.35"
regex = "1"
